--- a/deploy/crds/openaihub_v1alpha1_openaihub_crd.yaml
+++ b/deploy/crds/openaihub_v1alpha1_openaihub_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: openaihubuis.openaihub.ibm.com
+  name: openaihubs.openaihub.ibm.com
 spec:
   group: openaihub.ibm.com
   names:
-    kind: OpenAIHubUI
-    listKind: OpenAIHubUIList
-    plural: openaihubuis
-    singular: openaihubui
+    kind: OpenAIHub
+    listKind: OpenAIHubList
+    plural: openaihubs
+    singular: openaihub
   scope: Namespaced
   subresources:
     status: {}
