--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: openaihub-ui-operator
+  name: openaihub-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: openaihub-ui-operator
+      name: openaihub-operator
   template:
     metadata:
       labels:
-        name: openaihub-ui-operator
+        name: openaihub-operator
     spec:
-      serviceAccountName: openaihub-ui-operator
+      serviceAccountName: openaihub-operator
       containers:
         - name: ansible
           command:
@@ -20,7 +20,7 @@ spec:
           - /tmp/ansible-operator/runner
           - stdout
           # Replace this with the built image name
-          image: ffdlops/openaihub-ui:v0.0.1
+          image: ffdlops/openaihub:v0.0.1
           imagePullPolicy: Always
           volumeMounts:
           - mountPath: /tmp/ansible-operator/runner
@@ -28,7 +28,7 @@ spec:
             readOnly: true
         - name: operator
           # Replace this with the built image name
-          image: ffdlops/openaihub-ui:v0.0.1
+          image: ffdlops/openaihub:v0.0.1
           imagePullPolicy: Always
           volumeMounts:
           - mountPath: /tmp/ansible-operator/runner
@@ -41,7 +41,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: "openaihub-ui-operator"
+              value: "openaihub-operator"
             - name: REACT_APP_API
               value: "169.63.38.242:32123"
       volumes:
