--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,13 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: openaihub-ui-operator
+  name: openaihub-operator
 subjects:
 - kind: ServiceAccount
-  name: openaihub-ui-operator
-  # Replace this with the namespace the operator is deployed in.
+  name: openaihub-operator
   namespace: default
 roleRef:
   kind: ClusterRole
-  name: cluster-admin
+  name: openaihub-operator
   apiGroup: rbac.authorization.k8s.io
