--- a/molecule/test-cluster/playbook.yml
+++ b/molecule/test-cluster/playbook.yml
@@ -6,22 +6,22 @@
   vars:
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
     deploy_dir: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') }}/deploy"
-    image_name: openaihub.ibm.com/openaihub-ui-operator:testing
-    custom_resource: "{{ lookup('file', '/'.join([deploy_dir, 'crds/openaihub_v1alpha1_openaihubui_cr.yaml'])) | from_yaml }}"
+    image_name: openaihub.ibm.com/openaihub-operator:testing
+    custom_resource: "{{ lookup('file', '/'.join([deploy_dir, 'crds/openaihub_v1alpha1_openaihub_cr.yaml'])) | from_yaml }}"
   tasks:
-  - name: Create the openaihub.ibm.com/v1alpha1.OpenAIHubUI
+  - name: Create the openaihub.ibm.com/v1alpha1.OpenAIHub
     k8s:
       namespace: '{{ namespace }}'
-      definition: "{{ lookup('file', '/'.join([deploy_dir, 'crds/openaihub_v1alpha1_openaihubui_cr.yaml'])) }}"
+      definition: "{{ lookup('file', '/'.join([deploy_dir, 'crds/openaihub_v1alpha1_openaihub_cr.yaml'])) }}"
 
   - name: Get the newly created Custom Resource
     debug:
-      msg: "{{ lookup('k8s', group='openaihub.ibm.com', api_version='v1alpha1', kind='OpenAIHubUI', namespace=namespace, resource_name=custom_resource.metadata.name) }}"
+      msg: "{{ lookup('k8s', group='openaihub.ibm.com', api_version='v1alpha1', kind='OpenAIHub', namespace=namespace, resource_name=custom_resource.metadata.name) }}"
 
   - name: Wait 40s for reconciliation to run
     k8s_facts:
       api_version: 'v1alpha1'
-      kind: 'OpenAIHubUI'
+      kind: 'OpenAIHub'
       namespace: '{{ namespace }}'
       name: '{{ custom_resource.metadata.name }}'
     register: reconcile_cr
