--- a/watches.yaml
+++ b/watches.yaml
@@ -1,5 +1,5 @@
 ---
 - version: v1alpha1
   group: openaihub.ibm.com
-  kind: OpenAIHubUI
-  role: /opt/ansible/roles/openaihubui
+  kind: OpenAIHub
+  role: /opt/ansible/roles/openaihub
