--- a/roles/openaihub/vars/main.yml
+++ b/roles/openaihub/vars/main.yml
@@ -6,5 +6,8 @@ kubectl_version: "{{ lookup('env','KUBECTL_VERSION') | default('v1.13.4', true) 
 openaihub:
   namespace: "{{ meta.namespace | default('default', true) }}"
   react_app_api: "{{ lookup('env','REACT_APP_API') | default('0.0.0.0', true) }}"
+  react_app_kfp: "{{ lookup('env','REACT_APP_KFP') | default('0.0.0.0', true) }}"
+  react_app_run: "{{ lookup('env','REACT_APP_RUN') | default('true', true) }}"
+  react_app_upload: "{{ lookup('env','REACT_APP_UPLOAD') | default('true', true) }}"
   ui_image: "{{ lookup('env','UI_IMAGE') | default('docker.io/kastentx/openaihub-ui', true) }}"
   api_image: "{{ lookup('env','API_IMAGE') | default('docker.io/ckadner/openaihub-api:0.3', true) }}"
